# kernels

./: .gitignore  pyproject.toml
.devcontainer/: Dockerfile  Dockerfile.xpu  build.sh  build_xpu.sh  compose.xpu.yaml  compose.yaml  devcontainer.json
kernels/cutile/: __init__.py  batch_matmul.py  flash_sdpa.py  rope.py  softmax.py  utils.py  vector_add.py
kernels/triton/: __init__.py  batch_matmul.py  flash_sdpa.py  rope.py  softmax.py  utils.py  vector_add.py
kernels/utils/: __init__.py
scripts/: test_bmm.py  test_flash_gqa.py  test_flash_sdpa.py  test_rope.py  test_softmax.py  test_vector_add.py
