[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kernels"
version = "0.1.0"
authors = [
  { name="Tianqi Ren", email="tianqi.r@outlook.com" },
]
description = "CUDA Kernels"

classifiers = [
  "Programming Language :: Python :: 3",
]

requires-python = ">=3.12"
dependencies = [
]

[tool.setuptools.packages.find]
where = ["."]
include = ["kernels"]
  